tests/snapshots/output/list.snap
---
source: tests/snapshots/html.rs
description: "<ul><li>Item 1</li><li>Item 2</li></ul>\n"
---
<ul>
    <li>Item 1</li>
    <li>Item 2</li>
</ul>
