tests/snapshots/output/match_else_multiline.snap
---
source: tests/snapshots/match_blocks.rs
description: "{% match multiple_choice_answer %}\n  {% when 3 %} Correct!\n  {% else %} Sorry, the right answer is \"3\".\n{% endmatch %}\n"
---
{% match multiple_choice_answer %}
    {% when 3 %} Correct!
    {% else %} Sorry, the right answer is "3".
{% endmatch %}
