tests/snapshots/output/match_text_inline.snap
---
source: tests/snapshots/match_blocks.rs
description: "{% match item %}{% when Some with (\"foo\") %}Found literal foo{% when Some with (val) %}Found {{ val }}{% when None %}{% endmatch %}\n"
---
{% match item %}
    {% when Some with ("foo") %}Found literal foo
    {% when Some with (val) %}Found {{ val }}
    {% when None %}
{% endmatch %}
