tests/snapshots/output/mixed_attr.snap
---
source: tests/snapshots/mixed.rs
description: "<i class=\"wi-icon-xl {{ data.icon_class }} wi-primary {{ color }}\" aria-label=\"{{ data.description }}\"></i>\n"
---
<i class="wi-icon-xl {{ data.icon_class }} wi-primary {{ color }}" aria-label="{{ data.description }}">
</i>
