tests/snapshots/output/mixed_html_comment.snap
---
source: tests/snapshots/mixed.rs
description: "<!-- {# A Comment #}{% if let Some(user) = user %}<i>Bonjour</i> {{ user.name }} !{% endif %} -->\n"
---
<!-- {# A Comment #}{% if let Some(user) = user %}<i>Bonjour</i> {{ user.name }} !{% endif %} -->
