tests/snapshots/output/mixed_no_whitespace_between.snap
---
source: tests/snapshots/rules.rs
description: "<p>This is a{{ single_line }}paragraph{{ not_surrounded }}by whitespaces{{ and }}{{ blank }}lines.{{ lol }}!</p>\n"
---
<p>
    This is a{{ single_line }}paragraph{{ not_surrounded }}by whitespaces
    {{ and }}{{ blank }}lines.{{ lol }}!
</p>
