tests/snapshots/output/mixed_unclosed_attr_quote.snap
---
source: tests/snapshots/malformed.rs
description: "<div class=\"{{ color }}>something</div>\n"
---
<div class="{{ color }}>something</div>
